--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
