--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,24 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+/* body {
+  background-color: #fff;
+}
+
+.dark body {
+  background-color: #242424;
+} */
+
+@keyframes slide {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.slide {
+  animation: slide 1s forwards;
+}
